--- a/cloud_conf.yml
+++ b/cloud_conf.yml
@@ -3,3 +3,6 @@ api.port: 1323
 etcd.address: 192.168.122.31:2379
 metrics.enabled: false
 container.pool.memory: 8192
+storage.address: "http://192.168.122.31:8086"
+storage.token: "serverledge"
+storage.orgname: "serverledge"
