--- a/cloud_conf.yml
+++ b/cloud_conf.yml
@@ -5,4 +5,5 @@ metrics.enabled: false
 container.pool.memory: 8192
 storage.address: "http://192.168.122.31:8086"
 storage.token: "serverledge"
+storage.bucket: "dqn"
 storage.orgname: "serverledge"
