--- a/conf.yml
+++ b/conf.yml
@@ -1,6 +1,7 @@
 api.port: 1323
 etcd.address: 192.168.122.31:2379
 metrics.enabled: false
+scheduler.policy: "DQN"
 container.pool.memory: 2560
 storage.address: "http://192.168.122.31:8086"
 storage.token: "serverledge"
