--- a/conf.yml
+++ b/conf.yml
@@ -2,7 +2,7 @@ api.port: 1323
 etcd.address: 192.168.122.31:2379
 metrics.enabled: false
 scheduler.policy: "DQN"
-dqn.model.path: "dqn_models/model"
+dqn.model.path: "dqn_utils/model"
 container.pool.memory: 2560
 storage.address: "http://192.168.122.31:8086"
 storage.token: "serverledge"
