--- a/conf.yml
+++ b/conf.yml
@@ -12,3 +12,4 @@ dqn.store.stats.every: 3600
 default.stats: true
 registry.nearby.interval: 1
 registry.monitoring.interval: 1
+scheduler.cloud.cost: 0.00005
